<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UnusedResources">
    <EditTextPreference
        android:key="@string/gasp_server_uri_preferences"
        android:title="@string/gasp_server_uri_title"
        android:dialogTitle="@string/gasp_server_uri_dialog"
        android:defaultValue="@string/gasp_server_uri_base" />
    <EditTextPreference
        android:key="@string/gasp_push_uri_preferences"
        android:title="@string/gasp_push_uri_title"
        android:dialogTitle="@string/gasp_push_uri_dialog"
        android:defaultValue="@string/gasp_push_uri" />
    <EditTextPreference
        android:key="@string/gasp_twitter_preferences"
        android:title="@string/gasp_twitter_title"
        android:dialogTitle="@string/gasp_twitter_dialog"
        android:defaultValue="@string/gasp_twitter_default" />
    <ListPreference
        android:key="@string/places_search_radius_preferences"
        android:title="@string/places_search_radius_title"
        android:dialogTitle="@string/places_search_radius_dialog"
        android:entries="@array/radius_entries"
        android:entryValues="@array/radius_entry_values"
        android:defaultValue="500" />
</PreferenceScreen>